--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Tests
+/Tests/coverage
+
+#Vendors
+/vendor/*
+!/vendor/vendors.php
+
 #Mac OS X
 .DS_Store
 
@@ -5,3 +12,6 @@
 /.buildpath
 /.project
 /.settings
+
+#NetBeans
+/nbproject
