Fix eventual circular reference error

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,4 +2,4 @@ services:
 
     pierrre_automatic_validator.automatic_validator:
         class: Pierrre\AutomaticValidatorBundle\Util\AutomaticValidator
-        arguments: ["@validator"]
+        arguments: ["@service_container"]
